# codelib

./: LICENSE.md  README
c/: CMakeLists.txt  README.md  cl_aio.c  cl_daemonize.h  cl_fts.c  cl_qsort.c  cl_rdtsc_clock.c  testdaemon.c
c/cl_ca/: Makefile  audio.c
c/cl_rope/: rope.c  rope.h
c/ibtest/: Makefile  cm-conn.c  ib-conn.c  ibv-rc.c  verb-probe.c
c/include/: csnip_renum.h
c/reorder/: README.md  reorder.c
c/src/: csnip_renum.c
c/tests/: CMakeLists.txt  test_renum.c
clj/clj-proj/: project.clj
clj/clj-proj/src/my_proj/: core.clj
elisp/: learn_elisp.el
gnuplot/cdf/: README.md  cdf.plot  raw2freq.lua  raw2freq.pl  result.txt
go/clisrv/: README.md  clisrv.go
go/drplayer/: drplayer.go  verfmt  version-0
go/hhash/: README.md  hhash.go  hhash_test.go
go/mailthem/: mailthem.go
go/pack/: pack.go
go/pbar/: pbar.go  pbar_test.go
go/pimon/: pimon.go
kmod/ktoy/: LICENSE  Makefile  README.md  ktoy.c  ktoy.h  ktoy_test.c  ldmod.sh  unldmod.sh
perl/: README.md  clusters.dot  clusters.pl  codegen.pl  md2post  pick_codeblock.pl  seqdiag.dot  sosper.pl  split.pl  vmem.pl
perl/data/: memop
